--- a/štoperica/Base.lproj/Main.storyboard
+++ b/štoperica/Base.lproj/Main.storyboard
@@ -1,25 +1,149 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="s_toperica" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XhE-jJ-FTu">
+                                <rect key="frame" x="-4" y="20" width="383" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="QIK-lW-qg1"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="eDp-NW-24Y"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Tajmer" id="Fbo-66-HI5">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="2V1-94-dP1">
+                                            <color key="tintColor" red="0.71482602070000001" green="0.32589889280000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <connections>
+                                                <action selector="pokreni:" destination="BYZ-38-t0r" id="BFt-kj-5Jm"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E1D-lR-KaO">
+                                <rect key="frame" x="-4" y="623" width="383" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="7vw-jl-74d"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem width="89" style="plain" systemItem="fixedSpace" id="dLK-7I-ATM"/>
+                                    <barButtonItem systemItem="refresh" id="8FC-dM-80l">
+                                        <color key="tintColor" red="0.71482602070000001" green="0.32589889280000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="restartuj:" destination="BYZ-38-t0r" id="Lox-td-V6e"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Yd6-M3-A0C"/>
+                                    <barButtonItem title="Item" systemItem="pause" id="2n6-PV-7Wl">
+                                        <color key="tintColor" red="0.71482602070000001" green="0.32589889280000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="pauziraj:" destination="BYZ-38-t0r" id="fW2-PS-Xaa"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="86" style="plain" systemItem="fixedSpace" id="Kn3-eN-KuO"/>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kw8-un-CbC">
+                                <rect key="frame" x="175" y="317" width="25" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebm-oV-aS5">
+                                <rect key="frame" x="76" y="317" width="25" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGG-45-AXw">
+                                <rect key="frame" x="274" y="317" width="25" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text=":" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cy4-kT-l8O">
+                                <rect key="frame" x="132" y="303" width="12" height="61"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text=":" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="99G-aJ-5bF">
+                                <rect key="frame" x="231" y="303" width="12" height="61"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Č   -   M   -   S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rW7-tv-lIN">
+                                <rect key="frame" x="52" y="262" width="270" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" red="0.71482602070000001" green="0.32589889280000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="____________________" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ee3-52-ihN">
+                                <rect key="frame" x="4" y="282" width="375" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" red="0.053397901689999999" green="0.25292749069999998" blue="0.94747482569999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="XhE-jJ-FTu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="0vX-Bh-4nm"/>
+                            <constraint firstItem="cy4-kT-l8O" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2JZ-aY-FNE"/>
+                            <constraint firstItem="ee3-52-ihN" firstAttribute="top" secondItem="rW7-tv-lIN" secondAttribute="bottom" constant="-27" id="2Ne-kL-rGw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XhE-jJ-FTu" secondAttribute="trailing" constant="-20" id="2Te-O9-UJA"/>
+                            <constraint firstItem="Kw8-un-CbC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6lT-Yr-fkY"/>
+                            <constraint firstItem="Kw8-un-CbC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="802-h6-Cth"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XhE-jJ-FTu" secondAttribute="trailing" constant="-20" id="8hU-Lu-EER"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="E1D-lR-KaO" secondAttribute="trailing" constant="-20" id="8lv-wR-t4I"/>
+                            <constraint firstItem="Kw8-un-CbC" firstAttribute="top" secondItem="ee3-52-ihN" secondAttribute="bottom" constant="8" id="Eeo-6L-BLz"/>
+                            <constraint firstItem="fGG-45-AXw" firstAttribute="leading" secondItem="Kw8-un-CbC" secondAttribute="trailing" constant="27" id="HvK-de-u80"/>
+                            <constraint firstItem="ebm-oV-aS5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Icn-L9-fZC"/>
+                            <constraint firstItem="E1D-lR-KaO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="JbU-ax-ct1"/>
+                            <constraint firstItem="Kw8-un-CbC" firstAttribute="leading" secondItem="cy4-kT-l8O" secondAttribute="trailing" constant="7" id="KYF-a3-u3S"/>
+                            <constraint firstItem="fGG-45-AXw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="L4U-09-zVL"/>
+                            <constraint firstItem="XhE-jJ-FTu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Tjv-Gy-gqR"/>
+                            <constraint firstItem="fGG-45-AXw" firstAttribute="leading" secondItem="99G-aJ-5bF" secondAttribute="trailing" constant="7" id="XRp-il-PVK"/>
+                            <constraint firstItem="99G-aJ-5bF" firstAttribute="leading" secondItem="Kw8-un-CbC" secondAttribute="trailing" constant="8" id="aiE-VP-lFH"/>
+                            <constraint firstItem="rW7-tv-lIN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bN3-Iy-gla"/>
+                            <constraint firstItem="Kw8-un-CbC" firstAttribute="leading" secondItem="ebm-oV-aS5" secondAttribute="trailing" constant="27" id="hIv-im-x3O"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="E1D-lR-KaO" secondAttribute="bottom" id="i9i-4U-wOn"/>
+                            <constraint firstItem="Kw8-un-CbC" firstAttribute="top" secondItem="rW7-tv-lIN" secondAttribute="bottom" constant="8" id="otN-ud-XL6"/>
+                            <constraint firstItem="cy4-kT-l8O" firstAttribute="leading" secondItem="ebm-oV-aS5" secondAttribute="trailing" constant="8" id="vba-KG-5x9"/>
+                            <constraint firstItem="XhE-jJ-FTu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="wgY-5i-oL2"/>
+                            <constraint firstItem="ee3-52-ihN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xFd-M8-DMG"/>
+                            <constraint firstItem="99G-aJ-5bF" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zFK-oP-Amn"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="a7H-XD-stU"/>
+                    <connections>
+                        <outlet property="minuti" destination="Kw8-un-CbC" id="5Nj-qL-9BY"/>
+                        <outlet property="sati" destination="ebm-oV-aS5" id="k8E-LN-UsK"/>
+                        <outlet property="sekunde" destination="fGG-45-AXw" id="l1c-qh-Gep"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="244.5" y="311.5"/>
         </scene>
     </scenes>
 </document>
